DOCS-15905 doc timelib support for additional format specifiers (#3701)
* DOCSP-15905 doc timelib support for additional format specifiers

* Apply suggestions from code review

Co-authored-by: Ashley Brown <98361885+mdb-ashley@users.noreply.github.com>

* DOCS-15905 updates for review feedback

---------

Co-authored-by: Ashley Brown <98361885+mdb-ashley@users.noreply.github.com>

--- a/source/includes/extracts-date-format-specifiers.yaml
+++ b/source/includes/extracts-date-format-specifiers.yaml
@@ -12,8 +12,16 @@ content: |
         - Description
         - Possible Values
 
+      * - ``%b``
+        - Abbreviated month (3 letters)
+        - ``jan``-``dec``
+
+      * - ``%B``
+        - Full month name
+        - ``january``-``december``
+
       * - ``%d``
-        - Day of Month (2 digits, zero padded)
+        - Day of month (2 digits, zero padded)
         - ``01``-``31``
 
       * - ``%G``
@@ -33,11 +41,9 @@ content: |
         - Millisecond (3 digits, zero padded)
         - ``000``-``999``
 
-
       * - ``%m``
         - Month (2 digits, zero padded)
         - ``01``-``12``
-
 
       * - ``%M``
         - Minute (2 digits, zero padded)
@@ -47,18 +53,11 @@ content: |
         - Second (2 digits, zero padded)
         - ``00``-``60``
 
-
-      * - ``%w``
-        - Day of week (1-Sunday, 7-Saturday)
-        - ``1``-``7``
-
       * - ``%u``
-
         - Day of week number in ISO 8601 format (1-Monday, 7-Sunday)
         - ``1``-``7``
 
       * - ``%U``
-
         - Week of year (2 digits, zero padded)
         - ``00``-``53``
 
@@ -66,6 +65,10 @@ content: |
 
         - Week of Year in ISO 8601 format
         - ``01``-``53``
+
+      * - ``%w``
+        - Day of week (0-Sunday, 6-Saturday)
+        - ``0``-``6``
 
       * - ``%Y``
         - Year (4 digits, zero padded)
@@ -155,11 +158,19 @@ content: |
 
         - ``1``-``7``
 
+      * - ``%U``
+        - Week of year (2 digits, zero padded)
+        - ``00``-``53``
+
       * - ``%V``
 
         - Week of Year in ISO 8601 format
 
         - ``1``-``53``
+
+      * - ``%w``
+        - Day of week as an integer (0-Sunday, 6-Saturday)
+        - ``0``-``6``
 
       * - ``%Y``
         - Year (4 digits, zero padded)
