(DOCSP-15593): Remove ImportExportTools from Windows args (#3786)
* Remove ImportExportTools from Windows args

* Update list of available tools per tech review

* Fix issue with binary name not rendering

* Links to mongokerberos and mongoldap don't have the .exe

--- a/source/includes/steps-install-mongodb-on-windows-unattended.yaml
+++ b/source/includes/steps-install-mongodb-on-windows-unattended.yaml
@@ -50,27 +50,21 @@ pre: |
         - Binaries Included in the Component Set
 
       * - ``ServerNoService``
-        - :binary:`~bin.mongod.exe`
+        - :binary:`mongod.exe`
 
       * - ``ServerService``
-        - Set up :binary:`~bin.mongod.exe` as a Windows service.
+        - Set up :binary:`mongod.exe` as a Windows service.
 
       * - ``Router``
-        - :binary:`~bin.mongos.exe`
-      * - ``MonitoringTools``
-        - :binary:`mongostat.exe <bin.mongostat>`,
-          :binary:`mongotop.exe <bin.mongotop>`
-      * - ``ImportExportTools``
-        - :binary:`mongodump.exe <bin.mongodump>`,
-          :binary:`mongorestore.exe <bin.mongorestore>`,
-          :binary:`mongoexport.exe <bin.mongoexport>`,
-          :binary:`mongoimport.exe <bin.mongoimport>`
+        - :binary:`mongos.exe`
+
       * - ``MiscellaneousTools``
-        - :binary:`bsondump.exe <bin.bsondump>`,
-          :binary:`mongofiles.exe <bin.mongofiles>`
+        - ``mongodecrypt.exe``,
+          :binary:`mongokerberos.exe <mongokerberos>`,
+          :binary:`mongoldap.exe <mongoldap>`
 
   For example, to install the MongoDB server
-  (:binary:`~bin.mongod.exe`) with the legacy ``mongo``
+  (:binary:`mongod.exe`) with the legacy ``mongo``
   client and then set up the MongoDB server as a Windows service,
   run:
 
