--- a/source/includes/steps-configure-ldap-sasl-activedirectory-authentication.yaml
+++ b/source/includes/steps-configure-ldap-sasl-activedirectory-authentication.yaml
@@ -134,9 +134,11 @@ pre: |
      Directory server performs a recursive group lookup for any group that
      either directly or transitively lists the user as a member. Based on the
      :ref:`Active Directory groups <activedirectory-authauthz-groupObj>`, the
-     :abbr:`AD (Active Directory)` server returns
-     ``CN=dba,CN=Users,DC=example,DC=com`` and
-     ``CN=engineering,CN=Users,DC=example,DC=com``.
+     :abbr:`AD (Active Directory)` server returns the following groups:
+     
+     - ``CN=dba,CN=Users,DC=example,DC=com``
+     - ``CN=engineering,CN=Users,DC=example,DC=com``
+     - ``CN=PrimaryApplication,CN=Users,DC=example,DC=com``
   
   MongoDB maps each returned group :abbr:`DN (Distinguished Name)` to a role
   on the ``admin`` database. For each mapped group :abbr:`DN (Distinguished
