add jammy + remove prev. versions (#3634)
* add jammy + remove prev. versions

* Apply suggestions from code review

Co-authored-by: John Williams <55147273+jwilliams-mongo@users.noreply.github.com>

* additional edits

---------

Co-authored-by: John Williams <55147273+jwilliams-mongo@users.noreply.github.com>

--- a/source/includes/extracts-install-mongodb-manually.yaml
+++ b/source/includes/extracts-install-mongodb-manually.yaml
@@ -58,6 +58,12 @@ content: |
 
      sudo apt-get install libcurl3 openssl liblzma5
 ---
+ref: install-mongodb-enterprise-manually-ubuntu-22
+content: |
+  .. code-block:: bash
+
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+---
 ref: install-mongodb-enterprise-manually-ubuntu-20
 content: |
   .. code-block:: bash
@@ -75,6 +81,12 @@ content: |
   .. code-block:: bash
 
      sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+---
+ref: install-mongodb-community-manually-ubuntu-22
+content: |
+  .. code-block:: bash
+
+     sudo apt-get install libcurl4 openssl liblzma5
 ---
 ref: install-mongodb-community-manually-ubuntu-20
 content: |
@@ -99,6 +111,7 @@ content: |
   .. code-block:: bash
 
      sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl openldap openssl xz-libs
+
 ---
 ref: install-mongodb-enterprise-manually-redhat-8
 content: |
