--- a/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
@@ -11,49 +11,36 @@ level: 4
 ref: sources-list
 content: |
 
-   Click on the appropriate tab for your version of Ubuntu.
+  Click the appropriate tab for your version of Ubuntu.
 
-   .. tabs::
+  .. tabs::
 
-      tabs:
-         - id: focal
-           name: Ubuntu 20.04 (Focal)
-           content: |
+     tabs:
+     
+        - id: jammy
+          name: Ubuntu 22.04 (Jammy)
+          content: |
 
-              The following instruction is for **Ubuntu 20.04
-              (Focal)**.
+             The following instruction is for **Ubuntu 22.04 (Jammy)**.
 
-              Create the list file for Ubuntu 20.04 (Focal).
+             Create the list file for Ubuntu 22.04 (Jammy).
 
-              .. code-block:: bash
+             .. code-block:: bash
 
-                 echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
+                echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu jammy/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
 
-         - id: bionic
-           name: Ubuntu 18.04 (Bionic)
-           content: |
+        - id: focal
+          name: Ubuntu 20.04 (Focal)
+          content: |
 
-              The following instruction is for **Ubuntu 18.04
-              (Bionic)**.
+             The following instruction is for **Ubuntu 20.04
+             (Focal)**.
 
-              Create the list file for Ubuntu 18.04 (Bionic).
+             Create the list file for Ubuntu 20.04 (Focal).
 
-              .. code-block:: bash
+             .. code-block:: bash
 
-                echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu bionic/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
-
-         - id: xenial
-           name: Ubuntu 16.04 (Xenial)
-           content: |
-
-              The following instruction is for Ubuntu 16.04
-              (Xenial).
-
-              Create the list file for Ubuntu 16.04 (Xenial).
-
-              .. code-block:: bash
-
-                 echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu xenial/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
+                echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
 
 ---
 stepnum: 3
@@ -98,4 +85,3 @@ action:
       echo "{+package-name+}-mongosh hold" | sudo dpkg --set-selections
       echo "{+package-name-enterprise+}-mongos hold" | sudo dpkg --set-selections
       echo "{+package-name-enterprise+}-tools hold" | sudo dpkg --set-selections
-...
