--- a/source/includes/steps-install-mongodb-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-on-ubuntu.yaml
@@ -3,32 +3,29 @@ stepnum: 1
 level: 4
 ref: import-key
 content: |
-    From a terminal, issue the following command to import the
-    MongoDB public GPG Key from `<https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc>`_:
+  From a terminal, issue the following command to import the
+  MongoDB public GPG Key from `<https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc>`_:
 
-    .. code-block:: bash
+  .. code-block:: bash
 
-       wget -qO - https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc | sudo apt-key add -
+     wget -qO - https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc | sudo apt-key add -
 
-    The operation should respond with an ``OK``. 
-    
-    However, if you receive an error indicating that ``gnupg`` is not
-    installed, you can:
-       
-    #. Install ``gnupg`` and its required libraries using the following command:
+  The operation should respond with an ``OK``. 
 
-       .. code-block:: bash
+  However, if you receive an error indicating that ``gnupg`` is not
+  installed, you can:
+     
+  #. Install ``gnupg`` and its required libraries using the following command:
 
-          sudo apt-get install gnupg
-       
-    #. Once installed, retry importing the key:
+     .. code-block:: bash
 
-       .. code-block:: bash
+        sudo apt-get install gnupg
+     
+  #. Once installed, retry importing the key:
 
-          wget -qO - https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc | sudo apt-key add -
+     .. code-block:: bash
 
-       
-   
+        wget -qO - https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc | sudo apt-key add -
 
 ---
 title: Create a list file for MongoDB.
@@ -37,60 +34,45 @@ level: 4
 ref: sources-list
 content: |
 
-   Create the list file
-   ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list`` for your
-   version of Ubuntu.
+  Create the list file
+  ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list`` for your
+  version of Ubuntu.
 
-   Click on the appropriate tab for your version of Ubuntu.
-   If you are unsure of what Ubuntu version the host is running,
-   open a terminal or shell on the host and execute ``lsb_release -dc``. 
+  Click on the appropriate tab for your version of Ubuntu.
+  If you are unsure of what Ubuntu version the host is running,
+  open a terminal or shell on the host and execute ``lsb_release -dc``. 
 
-   .. tabs::
+  .. tabs::
 
-      tabs:
-         - id: focal
-           name: Ubuntu 20.04 (Focal)
-           content: |
+     tabs:
+     
+        - id: jammy
+          name: Ubuntu 22.04 (Jammy)
+          content: |
 
-              The following instruction is for **Ubuntu 20.04 (Focal)**.
+             The following instruction is for **Ubuntu 22.04 (Jammy)**.
 
-              Create the
-              ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
-              file for Ubuntu 20.04 (Focal):
+             Create the
+             ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
+             file for Ubuntu 22.04 (Jammy):
 
-              .. code-block:: bash
+             .. code-block:: bash
 
-                 echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+                echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
-         - id: bionic
-           name: Ubuntu 18.04 (Bionic)
-           content: |
+        - id: focal
+          name: Ubuntu 20.04 (Focal)
+          content: |
 
-              The following instruction is for **Ubuntu 18.04
-              (Bionic)**.
+             The following instruction is for **Ubuntu 20.04 (Focal)**.
 
-              Create the
-              ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
-              file for Ubuntu 18.04 (Bionic):
+             Create the
+             ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
+             file for Ubuntu 20.04 (Focal):
 
-              .. code-block:: bash
+             .. code-block:: bash
 
-                 echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
-
-         - id: xenial
-           name: Ubuntu 16.04 (Xenial)
-           content: |
-
-              The following instruction is for **Ubuntu 16.04
-              (Xenial)**.
-
-              Create the
-              ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
-              file for Ubuntu 16.04 (Xenial):
-
-              .. code-block:: bash
-
-                 echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+                echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
 ---
 title: Reload local package database.
@@ -111,40 +93,39 @@ level: 4
 ref: install
 content: |
 
-   You can install either the latest stable version of MongoDB or a
-   specific version of MongoDB.
+  You can install either the latest stable version of MongoDB or a
+  specific version of MongoDB.
 
-   .. tabs::
+  .. tabs::
 
-      tabs:
-         - id: latest
-           name: Install the latest version of MongoDB.
-           content: |
+     tabs:
+        - id: latest
+          name: Install the latest version of MongoDB.
+          content: |
 
-              To install the latest stable version, issue the following
+             To install the latest stable version, issue the following
 
-              .. code-block:: bash
+             .. code-block:: bash
 
-                 sudo apt-get install -y {+package-name-org+}
-         - id: specific
-           name: Install a specific release of MongoDB.
-           content: |
+                sudo apt-get install -y {+package-name-org+}
+        - id: specific
+          name: Install a specific release of MongoDB.
+          content: |
 
-              .. include:: /includes/release/pin-version-intro.rst
-              .. include:: /includes/release/pin-repo-to-version-deb.rst
-              .. include:: /includes/release/pin-version-outro-org.rst
-  
-   Optional. Although you can specify any available version of MongoDB,
-   ``apt-get`` will upgrade the packages when a newer version becomes
-   available. To prevent unintended upgrades, you can pin the package
-   at the currently installed version:
+             .. include:: /includes/release/pin-version-intro.rst
+             .. include:: /includes/release/pin-repo-to-version-deb.rst
+             .. include:: /includes/release/pin-version-outro-org.rst
 
-   .. code-block:: bash
+  Optional. Although you can specify any available version of MongoDB,
+  ``apt-get`` will upgrade the packages when a newer version becomes
+  available. To prevent unintended upgrades, you can pin the package
+  at the currently installed version:
 
-      echo "{+package-name-org+} hold" | sudo dpkg --set-selections
-      echo "{+package-name-org+}-database hold" | sudo dpkg --set-selections
-      echo "{+package-name-org+}-server hold" | sudo dpkg --set-selections
-      echo "{+package-name+}-mongosh hold" | sudo dpkg --set-selections
-      echo "{+package-name-org+}-mongos hold" | sudo dpkg --set-selections
-      echo "{+package-name-org+}-tools hold" | sudo dpkg --set-selections
-...
+  .. code-block:: bash
+
+     echo "{+package-name-org+} hold" | sudo dpkg --set-selections
+     echo "{+package-name-org+}-database hold" | sudo dpkg --set-selections
+     echo "{+package-name-org+}-server hold" | sudo dpkg --set-selections
+     echo "{+package-name+}-mongosh hold" | sudo dpkg --set-selections
+     echo "{+package-name-org+}-mongos hold" | sudo dpkg --set-selections
+     echo "{+package-name-org+}-tools hold" | sudo dpkg --set-selections
