DOCSP-31348 Atlas Balancing Window in UTC (#3999)
* DOCSP-31348 Atlas Balancing Window in UTC

* wording

* JA + MH feedback

--- a/source/includes/steps-schedule-balancer-window.yaml
+++ b/source/includes/steps-schedule-balancer-window.yaml
@@ -58,9 +58,13 @@ action:
       - For ``HH`` values, use hour values ranging from ``00`` - ``23``.
       - For ``MM`` value, use minute values ranging from ``00`` - ``59``.
   - pre: |
-      MongoDB evaluates the start and stop times relative to the time
-      zone of the member which is serving as a primary in the config
-      server replica set.
+      For on-premises or self-managed sharded clusters, MongoDB evaluates the 
+      start and stop times relative to the time zone of the primary member in 
+      the config server replica set.
+
+      For Atlas clusters, MongoDB evaluates the start and stop times 
+      relative to the UTC timezone. 
+
   - pre: |
       .. note::
 
