DOCSP-31228 Add Preview banner to OIDC docs (#3961)
* DOCSP-31228 add banner

* DOCSP-31228 update banner

* DOCSP-31228 nit fix

* DOCSP-31228 typo

* DOCSP-31228 update banner

--- a/snooty.toml
+++ b/snooty.toml
@@ -361,6 +361,18 @@ value = """
     {+qe+} is now generally available (GA). \
     To learn more, see :ref:`qe-manual-feature-qe`.
     """
+
+[[banners]]
+targets = [
+    "core/security-oidc.txt",
+    "tutorial/configure-oidc.txt"
+]
+
+variant = "danger"
+value = """
+    OpenID Connect is currently available in Public Preview.
+    """
+
 [bundle]
 manpages = "manpages.tar.gz"
 
