Remove partitioned flag from docs (#4104)

--- a/source/includes/steps-convert-replica-set-enable-sharding.yaml
+++ b/source/includes/steps-convert-replica-set-enable-sharding.yaml
@@ -162,7 +162,7 @@ action:
       Migration Results for the last 24 hours: 
          1 : Success
       databases:
-         {  "_id" : "test", "primary" : "rs0", "partitioned" : true }
+         { "_id" : "test", "primary" : "rs0" }
             test.test_collection
                   shard key: { "number" : 1 }
                   unique: false
