--- a/source/includes/steps-zones-initial-chunk-distribution-compound-hashed-non-prefix.yaml
+++ b/source/includes/steps-zones-initial-chunk-distribution-compound-hashed-non-prefix.yaml
@@ -120,8 +120,8 @@ content: |
      --- Sharding Status --- 
 
        databases:
-         {  "_id" : "config",  "primary" : "config",  "partitioned" : true }
-         {  "_id" : "examples",  "primary" : "shardA",  "partitioned" : true,  "version" : {  "uuid" : UUID("6c351bcf-acd2-4fd9-82d8-9f6bd7321558"),  "lastMod" : 1 } }
+         { "_id" : "config", "primary" : "config" }
+         { "_id" : "examples", "primary" : "shardA", "version" : { "uuid" : UUID("6c351bcf-acd2-4fd9-82d8-9f6bd7321558"), "lastMod" : 1 } }
            examples.metrics
              shard key: { "facility" : 1, "_id" : "hashed" }
              unique: false
