--- a/source/includes/steps-zones-initial-chunk-distribution-compound-hashed-prefix.yaml
+++ b/source/includes/steps-zones-initial-chunk-distribution-compound-hashed-prefix.yaml
@@ -82,8 +82,8 @@ content: |
       --- Sharding Status --- 
 
       databases:
-        {  "_id" : "config",  "primary" : "config",  "partitioned" : true }
-        {  "_id" : "examples",  "primary" : "shardA",  "partitioned" : true,  "version" : {  "uuid" : UUID("245f8abf-a363-48b0-8208-2a5b577bbb4e"),  "lastMod" : 1 } }
+        { "_id" : "config", "primary" : "config" }
+        { "_id" : "examples", "primary" : "shardA", "version" : { "uuid" : UUID("245f8abf-a363-48b0-8208-2a5b577bbb4e"), "lastMod" : 1 } }
           examples.metrics
             shard key: { "_id" : "hashed", "facility" : 1 }
             unique: false
