--- a/source/includes/steps-zones-initial-chunk-distribution-single-compound.yaml
+++ b/source/includes/steps-zones-initial-chunk-distribution-single-compound.yaml
@@ -94,8 +94,8 @@ content: |
              Migration Results for the last 24 hours: 
                      No recent migrations
        databases:
-             {  "_id" : "config",  "primary" : "config",  "partitioned" : true }
-             {  "_id" : "exampledb",  "primary" : "shardA",  "partitioned" : true,  "version" : {  "uuid" : UUID("6c351bcf-acd2-4fd9-82d8-9f6bd7321558"),  "lastMod" : 1 } }
+             { "_id" : "config", "primary" : "config" }
+             { "_id" : "exampledb", "primary" : "shardA", "version" : { "uuid" : UUID("6c351bcf-acd2-4fd9-82d8-9f6bd7321558"), "lastMod" : 1 } }
                      exampledb.contacts
                              shard key: { "zip" : 1 }
                              unique: false
