(DOCSP-31334): Fix broken binary .exe links (#3891)
* (DOCSP-31334): Fix broken binary .exe links

* Revert "(DOCSP-31334): Fix broken binary .exe links"

This reverts commit bdc1467ee28e21d914aac0205a13e680a25849a4.

* fix replacements

* update kerberos page

--- a/source/includes/extracts-default-bind-ip-security.yaml
+++ b/source/includes/extracts-default-bind-ip-security.yaml
@@ -27,8 +27,8 @@ content: |
 ref: default-bind-ip-security-windows
 content: |
 
-   :binary:`~bin.mongod.exe` and
-   :binary:`~bin.mongos.exe` bind to localhost by default. If the members
+   :binary:`mongod.exe` and
+   :binary:`mongos.exe` bind to localhost by default. If the members
    of your deployment are run on different hosts or if you wish remote
    clients to connect to your deployment, you must specify
    ``--bind_ip`` or :setting:`net.bindIp`. For more information on the
