--- a/source/includes/steps-configure-ldap-sasl-activedirectory-authentication.yaml
+++ b/source/includes/steps-configure-ldap-sasl-activedirectory-authentication.yaml
@@ -269,7 +269,7 @@ pre: |
   
 
   :abbr:`Windows (Microsoft Windows)` MongoDB deployments must use
-  :binary:`~bin.mongod.exe` instead of :binary:`~bin.mongod`.
+  :binary:`mongod.exe` instead of :binary:`~bin.mongod`.
 ---
 title: Connect to the MongoDB server.
 ref: security-nativeldap-activedirectory-localhost
