--- a/source/includes/steps-control-access-to-mongodb-windows-with-kerberos-authentication.yaml
+++ b/source/includes/steps-control-access-to-mongodb-windows-with-kerberos-authentication.yaml
@@ -3,12 +3,12 @@ stepnum: 1
 ref: start-mongod-exe-without-kerberos-support
 pre: |
    For the initial addition of Kerberos users, start
-   :binary:`~bin.mongod.exe` without Kerberos support.
+   :binary:`mongod.exe` without Kerberos support.
 post: |
    If a Kerberos user is already in MongoDB and has the
    :ref:`privileges required to create a user
    <createUser-required-access>`, you can start 
-   :binary:`~bin.mongod.exe` with Kerberos support.
+   :binary:`mongod.exe` with Kerberos support.
    
    Include additional settings as appropriate to your deployment.
 
@@ -20,8 +20,8 @@ title: Connect to ``mongod``.
 stepnum: 2
 ref: connect-to-mongod
 pre: |
-   Connect :binary:`~bin.mongosh` to the :binary:`~bin.mongod.exe`
-   instance. If :binary:`~bin.mongod.exe` has :option:`--auth <mongod --auth>` enabled, ensure
+   Connect :binary:`~bin.mongosh` to the :binary:`mongod.exe`
+   instance. If :binary:`mongod.exe` has :option:`--auth <mongod --auth>` enabled, ensure
    you connect with the :ref:`privileges required to create a user
    <createUser-required-access>`.
 ---
@@ -32,7 +32,7 @@ pre: |
    Add a Kerberos principal, ``<username>@<KERBEROS REALM>``, to
    MongoDB in the ``$external`` database. Specify the Kerberos realm in
    **ALL UPPERCASE**. The ``$external`` database allows
-   :binary:`~bin.mongod.exe` to consult an external source (e.g. Kerberos)
+   :binary:`mongod.exe` to consult an external source (e.g. Kerberos)
    to authenticate. To specify the user's privileges, assign
    :doc:`roles </core/authorization>` to the user.
    
@@ -64,12 +64,12 @@ title: Start ``mongod.exe`` with Kerberos support.
 stepnum: 4
 ref: start-mongod-exe-with-kerberos-support
 pre: |
-   You must start :binary:`~bin.mongod.exe` as the :ref:`service principal
+   You must start :binary:`mongod.exe` as the :ref:`service principal
    account <assign-service-principal-name>`.
 action:
   - pre: |
-       To start :binary:`~bin.mongod.exe` with Kerberos support, set
-       the :binary:`~bin.mongod.exe` parameter
+       To start :binary:`mongod.exe` with Kerberos support, set
+       the :binary:`mongod.exe` parameter
        :parameter:`authenticationMechanisms` to ``GSSAPI``:
     language: sh
     code: |
@@ -80,7 +80,7 @@ action:
        .. include:: /includes/extracts/default-bind-ip-security-additional-command-line.rst
 
   - pre: |
-       For example, the following starts a standalone :binary:`~bin.mongod.exe`
+       For example, the following starts a standalone :binary:`mongod.exe`
        instance with Kerberos support:
     language: sh
     code: |
@@ -114,7 +114,7 @@ action:
   - pre: |
        If you are connecting to a system whose hostname does not
        match the Kerberos name, first connect :binary:`mongo.exe
-       <bin.mongo>` to the :binary:`~bin.mongod.exe`, and then from the
+       <bin.mongo>` to the :binary:`mongod.exe`, and then from the
        :binary:`mongo.exe <bin.mongo>` shell, use the
        :method:`db.auth()` method to authenticate in the ``$external``
        database.
