--- a/source/includes/steps-install-mongodb-on-windows-unattended.yaml
+++ b/source/includes/steps-install-mongodb-on-windows-unattended.yaml
@@ -57,7 +57,14 @@ pre: |
 
       * - ``Router``
         - :binary:`mongos.exe`
-
+      * - ``MonitoringTools``
+        - :binary:`mongostat.exe <bin.mongostat>`,
+          :binary:`mongotop.exe <bin.mongotop>`
+      * - ``ImportExportTools``
+        - :binary:`mongodump.exe <bin.mongodump>`,
+          :binary:`mongorestore.exe <bin.mongorestore>`,
+          :binary:`mongoexport.exe <bin.mongoexport>`,
+          :binary:`mongoimport.exe <bin.mongoimport>`
       * - ``MiscellaneousTools``
         - ``mongodecrypt.exe``,
           :binary:`mongokerberos.exe <mongokerberos>`,
