--- a/source/includes/steps-run-mongodb-on-windows.yaml
+++ b/source/includes/steps-run-mongodb-on-windows.yaml
@@ -20,7 +20,7 @@ stepnum: 2
 ref: start
 content: |
 
-  To start MongoDB, run :binary:`~bin.mongod.exe`.
+  To start MongoDB, run :binary:`mongod.exe`.
 
   .. code-block:: bat
 
@@ -80,4 +80,3 @@ content: |
   - :doc:`/tutorial/remove-documents`
 
 ...
-
