--- a/source/includes/extracts-agg-stages.yaml
+++ b/source/includes/extracts-agg-stages.yaml
@@ -102,6 +102,11 @@ content: |
           outputs either one document (for the first *n* documents) or
           zero documents (after the first *n* documents).
 
+      * - :pipeline:`$listSampledQueries`
+
+        - Lists sampled queries for all collections or a specific 
+          collection.
+
       * - :pipeline:`$listSearchIndexes`
 
         - .. include:: /includes/atlas-search-commands/command-descriptions/getSearchIndexes-description.rst
