DOCSP-32049 Add QE Includes to .gitignore (#4291)

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ primer/source/includes/table-linux-kernel-version-production.yaml
 venv
 .vscode
 changelogs/.mongodb-jira.yaml
+source/includes/qe-tutorials/csharp/obj/Debug/
