DOCSP-30176-resharding-update (#4198)
* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

* DOCSP-30176-resharding-update

---------

Co-authored-by: jason-price-mongodb <jshfjghsdfgjsdjh@aolsdjfhkjsdhfkjsdf.com>

--- a/source/includes/steps-reshard-a-collection.yaml
+++ b/source/includes/steps-reshard-a-collection.yaml
@@ -16,6 +16,7 @@ content: |
 
    MongoDB sets the max number of seconds to block writes to two seconds
    and begins the resharding operation.
+
 ---
 title: Monitor the resharding operation.
 level: 4
@@ -46,8 +47,7 @@ content: |
 
    - ``totalOperationTimeElapsedSecs``: elapsed operation time in
      seconds
-   - ``remainingOperationTimeEstimatedSecs``: estimate of the remaining
-     time to complete the resharding operation
+   - .. include:: /includes/remainingOperationTimeEstimatedSecs-details.rst
 
    .. code-block:: javascript
 
