DOCS-16140 Updates Debian/Ubuntu 7.0 Installation (#3380)
* DOCSP-4271 Adds Troubleshooting link to MongoDB Enterprise on Ubuntu page (#3149)

* DOCSP-28712 Ubuntu Jammy Tar Install (#3150)

* DOCSP-28712 Ubuntu Jammy Tar Install

* Fixes build

* Adds Jammy for Community Tar

* DOCS-15499 Debian 11 Installation (#2157)

* DOCSP-15499 Debian 11 installation instructions

* Fixes build issue

* Fixes build issue

* Debian community install

* Fixes per Aaron Morand

* Fixes per Aaron Morand

* DOCS-15945 Fixes Repo URL for Enterprise Jammy Install (#2793)

* DOCS-15945 Changes repo from community to enterprise

* Fixes per Arturo Costa

* DOCS-16140 Removes Ubuntu 18.04 and 16.04 from 7.0 install docs

* DOCS-16138 Adds support for Debian 12 install of MongoDB 7.0

* DOCS-16139 Removes Debian 10 and 9 from install pages

* Fixes build issue

* Removes Buster

* Fixes build issue

* Fixes platform on Debian Enterprise

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

---------

Co-authored-by: Kenneth P. J. Dyer <kenneth.dyer@monodb.com>

--- a/source/includes/extracts-install-mongodb-manually.yaml
+++ b/source/includes/extracts-install-mongodb-manually.yaml
@@ -57,12 +57,22 @@ content: |
   .. code-block:: bash
 
      sudo apt-get install libcurl3 openssl liblzma5
+
 ---
+
 ref: install-mongodb-enterprise-manually-ubuntu-22
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.5-0 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+
+---
+ref: install-mongodb-community-manually-ubuntu-22
+content: |
+  .. code-block:: bash
+
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.5-0 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+
 ---
 ref: install-mongodb-enterprise-manually-ubuntu-20
 content: |
@@ -81,12 +91,6 @@ content: |
   .. code-block:: bash
 
      sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
----
-ref: install-mongodb-community-manually-ubuntu-22
-content: |
-  .. code-block:: bash
-
-     sudo apt-get install libcurl4 openssl liblzma5
 ---
 ref: install-mongodb-community-manually-ubuntu-20
 content: |
