--- a/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
@@ -15,32 +15,28 @@ content: |
 
   .. tabs::
 
-     tabs:
-     
-        - id: jammy
-          name: Ubuntu 22.04 (Jammy)
-          content: |
+     .. tab:: Ubuntu 22.04
+        :tabid: jammy
+          
+        The following instruction is for **Ubuntu 22.04 (Jammy)**.
 
-             The following instruction is for **Ubuntu 22.04 (Jammy)**.
+        Create the list file for **Ubuntu 22.04 (Jammy)**:
 
-             Create the list file for Ubuntu 22.04 (Jammy).
+        .. code-block:: bash
 
-             .. code-block:: bash
+           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.com/apt/ubuntu jammy/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise-{+version+}.list
 
-                echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu jammy/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
+     .. tab:: Ubuntu 20.04
+        :tabid: focal
 
-        - id: focal
-          name: Ubuntu 20.04 (Focal)
-          content: |
+        The following instruction is for **Ubuntu 20.04
+        (Focal)**.
 
-             The following instruction is for **Ubuntu 20.04
-             (Focal)**.
+        Create the list file for Ubuntu 20.04 (Focal).
 
-             Create the list file for Ubuntu 20.04 (Focal).
+        .. code-block:: bash
 
-             .. code-block:: bash
-
-                echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
+           echo "deb [ arch=amd64,arm64 ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
 
 ---
 stepnum: 3
