--- a/snooty.toml
+++ b/snooty.toml
@@ -242,6 +242,7 @@ sbe = "slot-based query execution engine"
 sbe-short = "slot-based execution engine"
 sbe-title = "Slot-Based Query Execution Engine"
 version = "{+version+}"
+version-last = "{+version-last+}"
 year = "2022"
 
 
@@ -253,9 +254,10 @@ package-name-enterprise = "mongodb-enterprise"
 package-name = "mongodb"
 version = "7.0"
 latest-lts-version = "6.0"
-last-supported-version = "5.0"
+last-supported-version = "6.0"
 release = "7.0"
 version-dev = "7.0"
+version-last = "6.0"
 pgp-version = "{+version+}"
 rsa-key = "4B7C549A058F8B6B"
 pgp-fingerprint = "E162F504A20CDF15827F718D4B7C549A058F8B6B"
