--- a/source/includes/steps-install-mongodb-on-debian.yaml
+++ b/source/includes/steps-install-mongodb-on-debian.yaml
@@ -15,19 +15,20 @@ content: |
 
   .. tabs::
 
-     .. tab:: Debian 10 "Buster"
-        :tabid: debian-10-buster
+     .. tab:: Debian 12 "Bookworm"
+        :tabid: debian-12-bookworm
 
         .. code-block:: bash
 
-           echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+           echo "deb http://repo.mongodb.org/apt/debian bookworm/mongodb-org/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
-     .. tab:: Debian 9 "Stretch"
-        :tabid: debian-9-stretch
+     .. tab:: Debian 11 "Bullseye"
+        :tabid: debian-11-bullseye
 
         .. code-block:: bash
 
-           echo "deb http://repo.mongodb.org/apt/debian stretch/mongodb-org/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+           echo "deb http://repo.mongodb.org/apt/debian bullseye/mongodb-org/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+
 ---
 stepnum: 3
 level: 4
