--- a/source/includes/steps-install-mongodb-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-on-ubuntu.yaml
@@ -3,30 +3,7 @@ stepnum: 1
 level: 4
 ref: import-key
 content: |
-  From a terminal, issue the following command to import the
-  MongoDB public GPG Key from `<https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc>`_:
-
-  .. code-block:: bash
-
-     wget -qO - https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc | sudo apt-key add -
-
-  The operation should respond with an ``OK``. 
-
-  However, if you receive an error indicating that ``gnupg`` is not
-  installed, you can:
-     
-  #. Install ``gnupg`` and its required libraries using the following command:
-
-     .. code-block:: bash
-
-        sudo apt-get install gnupg
-     
-  #. Once installed, retry importing the key:
-
-     .. code-block:: bash
-
-        wget -qO - https://www.mongodb.org/static/pgp/server-{+pgp-version+}.asc | sudo apt-key add -
-
+  .. include:: /includes/curl-apt-gpg
 ---
 title: Create a list file for MongoDB.
 stepnum: 2
@@ -44,35 +21,29 @@ content: |
 
   .. tabs::
 
-     tabs:
-     
-        - id: jammy
-          name: Ubuntu 22.04 (Jammy)
-          content: |
+     .. tab:: Ubuntu 22.04 (Jammy)
+        :tabid: jammy
 
-             The following instruction is for **Ubuntu 22.04 (Jammy)**.
+        The following instruction is for **Ubuntu 22.04 (Jammy)**.
 
-             Create the
-             ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
-             file for Ubuntu 22.04 (Jammy):
+        Create the ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
+        file for Ubuntu 22.04 (Focal):
 
-             .. code-block:: bash
+        .. code-block:: bash
 
-                echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
-        - id: focal
-          name: Ubuntu 20.04 (Focal)
-          content: |
+     .. tab:: Ubuntu 20.04 (Focal)
+        :tabid: focal
 
-             The following instruction is for **Ubuntu 20.04 (Focal)**.
+        The following instruction is for **Ubuntu 20.04 (Focal)**.
 
-             Create the
-             ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
-             file for Ubuntu 20.04 (Focal):
+        Create the ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
+        file for Ubuntu 20.04 (Focal):
 
-             .. code-block:: bash
+        .. code-block:: bash
 
-                echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
+           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
 ---
 title: Reload local package database.
