DOCSP-30651 Position QE as new in 7.0 (#4295)
* Removed references to MongoDB 6.0 behavior when discussing QE

* Strengthened banner wording

* Caps fix

* Clarified Public Preview is 6.0 content

* Clarified Public Preview is 6.0 content

--- a/snooty.toml
+++ b/snooty.toml
@@ -364,9 +364,9 @@ targets = [
 
 variant = "warning"
 value = """
-    {+qe-equality-ga+} is generally available (GA) in \
-    MongoDB 7.0 and later. Data encrypted using the {+qe-preview+} \ 
-    from earlier versions is incompatible with the GA. \
+    {+qe-equality-ga+} is generally available (GA) in MongoDB 7.0 and \
+    later. The {+qe-preview+}, released in version 6.0, is no longer supported. \
+    Data encrypted using the Public Preview is incompatible with the feature release. \
     For more information, see :ref:`7.0-compatibility`.
     """
 
@@ -375,8 +375,9 @@ targets = ["core/csfle.txt", "core/csfle/*.txt", "core/csfle/*/*.txt"]
 
 variant = "tip"
 value = """
-    {+qe+} is now generally available (GA). \
-    To learn more, see :ref:`qe-manual-feature-qe`.
+    MongoDB's {+qe+} feature is available (GA) in MongoDB 7.0 and later. \
+    To learn more about {+qe+} and compare its benefits with {+csfle+}, \
+    see :ref:`qe-manual-feature-qe`.
     """
 
 [[banners]]
