DOCSP-16237 client server auth config quick fix (#4204)
* Added quick win content

* External review feedback

* Removed font treatment

* Internal PR feedback

* Syntax fix

--- a/source/includes/extracts-x509-certificate.yaml
+++ b/source/includes/extracts-x509-certificate.yaml
@@ -122,9 +122,17 @@ content: |
         subject= CN=<myhostname2>,OU=Dept1,O=MongoDB,ST=NY,C=US
         subject= CN=<myhostname3>,OU=Dept1,O=MongoDB,ST=NY,C=US
 
-   - *If* the certificate includes the Extended Key Usage
-     (``extendedKeyUsage``) setting, the value must include
-     ``clientAuth`` ("TLS Web Client Authentication").
+   - If the certificate used as the ``certificateKeyFile`` includes 
+     ``extendedKeyUsage``, the value must include both
+     ``clientAuth`` ("TLS Web Client Authentication") and ``serverAuth``
+     ("TLS Web Server Authentication").
+
+     .. code-block:: none
+
+        extendedKeyUsage = clientAuth, serverAuth
+
+   - If the certificate used as the ``clusterFile`` includes 
+     ``extendedKeyUsage``, the value must include ``clientAuth``.
 
      .. code-block:: none
 
