DOCSP-22340 [Server] Verify Integrity of MongoDB Packages (#3603)
* DOCSP-22340 [Server] Verify Integrity of MongoDB Packages

Clarify where user can select different binaries

* Add detail

* Add linux example

* Add linux example throughout

* test

* test

* Add second block to first step

* test

* test

* add linux

* release

* Add sha256

* Fix?

* try again

* fix

* Add text

* Fix URL

* Seperate example

* Fix

* fix

* Fix brackets

* Clarify

* Add review edits

---------

Co-authored-by: pierwill <pierwill@users.noreply.github.com>

--- a/source/includes/steps-install-verify-files-pgp.yaml
+++ b/source/includes/steps-install-verify-files-pgp.yaml
@@ -2,43 +2,59 @@ title: Download the MongoDB installation file.
 stepnum: 1
 ref: download-install-file
 action:
-   pre: |
-     Download the binaries from `MongoDB Download Center <https://www.mongodb.com/try/download?tck=docs_server>`__
-     based on your environment.
+   - pre: |
+       Download the binaries from `MongoDB Download Center <https://www.mongodb.com/try/download?tck=docs_server>`__
+       based on your environment. You can select different platforms and versions on that page.
+       Click :guilabel:`Copy link` and use the URL in the following instructions.
 
-     For example, to download the ``{+release+}`` release for macOS through the
-     shell, run this command:
-   language: sh
-   copyable: true
-   code: |
-     curl -LO https://fastdl.mongodb.org/osx/mongodb-macos-x86_64-{+release+}.tgz
+       For example, to download the ``{+release+}`` release for macOS through the
+       shell, run this command:
+     language: sh
+     copyable: true
+     code: |
+       curl -LO https://fastdl.mongodb.org/osx/mongodb-macos-x86_64-{+release+}.tgz
+   - pre: |
+       To download the ``{+release+}`` release for Linux through the
+       shell, run this command:
+     language: sh
+     copyable: true
+     code: |
+       curl -LO https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu2204-{+release+}.tgz
 ---
 title: Download the public signature file.
 stepnum: 2
 ref: download-sig-file
 action:
-   language: sh
-   copyable: true
-   code: |
-     curl -LO https://fastdl.mongodb.org/osx/mongodb-macos-x86_64-{+release+}.tgz.sig
+   - pre: |
+       For MacOS, run this command:
+     language: sh
+     copyable: true
+     code: |
+       curl -LO https://fastdl.mongodb.org/osx/mongodb-macos-x86_64-{+release+}.tgz.sig
+   - pre: |
+       For Linux, run this command:
+     language: sh
+     copyable: true
+     code: |
+       curl -LO https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu2204-{+release+}.tgz.sig
 ---
 title: Download then import the key file.
 stepnum: 3
 ref: download-key-file
 action:
  - pre: |
-     If you have not downloaded and imported the MongoDB {+version+} public key,
+     If you have not downloaded and imported the MongoDB {+release+} public key,
      run these commands:
    language: sh
    copyable: true
    code: |
-     curl -LO https://www.mongodb.org/static/pgp/server-{+version+}.asc
-     gpg --import server-{+version+}.asc
+     curl -LO https://www.mongodb.org/static/pgp/server-{+release+}.asc
+     gpg --import server-{+release+}.asc
  - pre: |
      PGP should return this response:
    language: sh
    code: |
-     gpg: key {+rsa-key+}: "MongoDB {+version+} Release Signing Key <packaging@mongodb.com>" imported
+     gpg: key {+rsa-key+}: "MongoDB {+release+} Release Signing Key <packaging@mongodb.com>" imported
      gpg: Total number processed: 1
      gpg:               imported: 1
 ---
@@ -47,11 +63,17 @@ stepnum: 4
 ref: verify-install-file
 action:
  - pre: |
-     Run this command:
+     For MacOS, run this command:
    language: sh
    copyable: true
    code: |
      gpg --verify mongodb-macos-x86_64-{+release+}.tgz.sig mongodb-macos-x86_64-{+release+}.tgz
+ - pre: |
+     For Linux, run this command, using the correct filename for your platform:
+   language: sh
+   copyable: true
+   code: |
+     gpg --verify mongodb-linux-x86_64-ubuntu2204-{+release+}.tgz.sig mongodb-linux-x86_64-ubuntu2204-{+release+}.tgz
  - pre: |
      GPG should return this response:
    language: sh
