(DOCSP-32488) Update install instructions for Jammy (#4420)
* (DOCSP-32488) Update install instructions for Jammy

* reformatting

* minimalism

* edits

* small refactor

* wording

* update enterprise support include

* style guide

* lowercase key

* more friendly tone

* internal review feedback

* formatting

--- a/source/includes/steps-install-mongodb-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-on-ubuntu.yaml
@@ -1,11 +1,11 @@
-title: Import the public key used by the package management system.
+title: Import the public key used by the package management system
 stepnum: 1
 level: 4
 ref: import-key
 content: |
   .. include:: /includes/curl-apt-gpg
 ---
-title: Create a list file for MongoDB.
+title: Create a list file for MongoDB
 stepnum: 2
 level: 4
 ref: sources-list
@@ -15,19 +15,13 @@ content: |
   ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list`` for your
   version of Ubuntu.
 
-  Click on the appropriate tab for your version of Ubuntu.
-  If you are unsure of what Ubuntu version the host is running,
-  open a terminal or shell on the host and execute ``lsb_release -dc``. 
-
   .. tabs::
 
      .. tab:: Ubuntu 22.04 (Jammy)
         :tabid: jammy
 
-        The following instruction is for **Ubuntu 22.04 (Jammy)**.
-
         Create the ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
-        file for Ubuntu 22.04 (Focal):
+        file for Ubuntu 22.04 (Jammy):
 
         .. code-block:: bash
 
@@ -35,8 +29,6 @@ content: |
 
      .. tab:: Ubuntu 20.04 (Focal)
         :tabid: focal
-
-        The following instruction is for **Ubuntu 20.04 (Focal)**.
 
         Create the ``/etc/apt/sources.list.d/mongodb-org-{+version+}.list``
         file for Ubuntu 20.04 (Focal):
@@ -46,7 +38,7 @@ content: |
            echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/{+version+} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-{+version+}.list
 
 ---
-title: Reload local package database.
+title: Reload local package database
 stepnum: 3
 level: 4
 ref: reload
@@ -58,7 +50,7 @@ action:
   code: |
     sudo apt-get update
 ---
-title: Install the MongoDB packages.
+title: Install the MongoDB packages
 stepnum: 4
 level: 4
 ref: install
@@ -71,7 +63,7 @@ content: |
 
      tabs:
         - id: latest
-          name: Install the latest version of MongoDB.
+          name: Install the latest version of MongoDB
           content: |
 
              To install the latest stable version, issue the following
@@ -80,7 +72,7 @@ content: |
 
                 sudo apt-get install -y {+package-name-org+}
         - id: specific
-          name: Install a specific release of MongoDB.
+          name: Install a specific release of MongoDB
           content: |
 
              .. include:: /includes/release/pin-version-intro.rst
